feat: add salesperson planner view
